<resources>
    <string name="app_name">Sarcasm Dude &amp; Be Like Bro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">About us</string>
    <string name="add_remove">Add/Remove Pages</string>
    <string name="sharetheapp">Share App with Friends</string>

    <!--Permission Related-->
    <string name="storage_permission_prompt_message">Storage permission needed</string>
    <string name="permission_prompt_settings_return">From settings</string>

    <!--FullScreen-->
    <string name="coming_soon">Coming Soon</string>

    <!--InternetConnectionChecker-->
    <string name="alert_internet_title">No Internet Connection</string>
    <string name="alert_internet_message">Troll Master requires Internet connection to work. Please check your connection and try again</string>

    <!--PlayVideo-->
    <string name="alert_video_wait_message">Please pause till video loads completely for viewing without interruption.</string>

    <!--Helper Methods-->
    <string name="helper_downloading">Downloading…</string>
    <string name="toast_whatsapp_not_found">Whatsapp not installed</string>
    <string name="intent_title_share_images">Share images…</string>
    <string name="intent_title_share">Share…</string>
    <string name="download_success">Downloaded Successfully</string>
    <string name="error">Error</string>
    <string name="unsupported_error">Unsupported Format Error</string>

    <!--Layout-->
    <string name="open_link_in_browser">Open Link in Browser</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="visitfb">View in FB</string>

    <!--PageNames-->
    <string name="pagename_sarcasm">Sarcasm</string>
    <string name="pagename_belikebro">Be Like Bro</string>
    <string name="pagename_dude">Dude</string>
    <string name="pagename_dude2">Dude 2</string>
    <string name="pagename_dudeandyobro">Dude and Yo Bro</string>
    <string name="pagename_mclovin">McLovin</string>
    <string name="pagename_memes">Memes</string>
    <string name="pagename_noonecares">No One Cares</string>
    <string name="pagename_carmemes">Car Memes</string>
    <string name="pagename_maleslife">Male\'s Life</string>
    <string name="pagename_correctbro">Correct Bro</string>
    <string name="pagename_sadcasm">Sadcasm</string>
    <string name="pagename_serioushumor">Serious Humor</string>
    <string name="pagename_trollfootball1">Troll Football 1</string>
    <string name="pagename_trollfootball2">Troll Football 2</string>
    <string name="pagename_funnyordie">Funny or Die</string>
    <string name="pagename_auntyacid">Aunty Acid</string>

    <!--Settings-->
    <string name="aboutus">About Us</string>
    <string name="prefrence_rateapp_title">Let us know if you are enjoying!</string>
    <string name="preference_rateapp_dialogTitle">Rate Sarcasm Dude &amp; Be Like Bro!</string>
    <string name="purchase_error">Error</string>
    <string name="purchase_already_owned">Error in purchase</string>
    <string name="captioninclude">Remove caption in shared message</string>
    <string name="captionsummarychecked">Troll text is added to shared message</string>
    <string name="captionsummaryunchecked">Troll text is not added to shared message</string>
    <string name="preference_addRemove_dialogTitle">Add/Remove Pages</string>

    <string name="exit_toast">Don\'t leave me bro..</string>
    <string name="settings_purchased_info">You already purchased this item</string>
    <string name="settings_purchase_cancel">F**k off dude</string>
    <string name="settings_purchase_success">Thanks dude!!</string>
    <string name="downloadhelper_success">Download Successful </string>
    <string name="app_share_message">Hi dude \nUse the new Sarcasm app, its Awesome!! : https://goo.gl/L7hzRo</string>

</resources>
